# OctoPrint-Gcode_ripper

./: MANIFEST.in  README.md  Taskfile.yml  pyproject.toml  setup.py
extras/: README.txt  gcode_ripper.md
extras/github/: bug_report.yml  feature_request.yml
octoprint_gcode_ripper/: G_Code_Rip.py  __init__.py
octoprint_gcode_ripper/static/gcode/: PART-int-pewa-radius-2.38-10m.gcode  PART-int-pewa-radius-2.38-12-tabs.gcode  PART-small-2.38-12-slow.gcode  PART-small-pewa-radius-2.38-12.gcode
octoprint_gcode_ripper/static/js/: gcode_ripper.js
octoprint_gcode_ripper/templates/: gcode_ripper_tab.jinja2
translations/: README.txt
