[build-system]
requires = [
    "setuptools>=68",
]
build-backend = "setuptools.build_meta"

[project]
name = "OctoPrint-Gcode_ripper"
version = "0.1.16"
description = "Modify Gcode coordinates using G-Code ripper."
authors = [
    { name = "PP", email = "transpirationturning@gmail.com" },
]
requires-python = ">=3.7,<4"
dependencies = []
dynamic = [
    "license",
]

[project.entry-points."octoprint.plugin"]
gcode_ripper = "octoprint_gcode_ripper"

[project.urls]
Homepage = "https://github.com/paukstelis/OctoPrint-Gcode_ripper"

[project.optional-dependencies]
develop = [
    "go-task-bin",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "octoprint_gcode_ripper",
    "octoprint_gcode_ripper.*",
]
